--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,7 +17,7 @@
         @apply  pt-5  
     }
     .tomas-button {
-        @apply bg-gradient-to-br from-purple-500 to-blue-500 p-5 rounded-2xl max-w-[10rem] cursor-pointer text-white font-semibold hover:shadow-2xl hover:shadow-purple-500 duration-500 min-w-[7rem] border-transparent border-2 hover:border-amber-500 hover:border-2
+        @apply hover:translate-y-1 bg-gradient-to-br from-purple-500 to-blue-500 p-5 rounded-2xl max-w-[10rem] cursor-pointer text-white font-semibold hover:shadow-2xl hover:shadow-purple-500 duration-500 min-w-[7rem] border-transparent border-2 hover:border-amber-500 hover:border-2
     }
     .tomas-navbar-button {
         @apply text-white min-w-[3rem] cursor-pointer hover:bg-white/20 duration-500 p-2 rounded-2xl ms-2 text-xl
